--- a/style.css
+++ b/style.css
@@ -11,6 +11,12 @@ body {
   padding: 0;
 }
 
+header {
+  inline-size: 100%;
+  text-align: center;
+  background-image: linear-gradient(red, gold 85%);
+}
+
 main {
   border-top: 1px solid #000;
   border-bottom: 1px solid #000;
